--- a/assets/index--E7lWKms.css
+++ b/assets/index--E7lWKms.css
@@ -1,659 +1,1 @@
-:root {
-    --main-color: #6C63FF;
-    --alt-color: #081828;
-    --white-bg: #FFF;
-    --main-bg-color: #F4F7FA;
-    --line-height: 1.6;
-    --main-padding: 80px;
-    --main-transition: .5s
-}
-
-.flex {
-    display: flex
-}
-
-.flex.jc-c {
-    justify-content: center
-}
-
-.flex.jc-sb {
-    justify-content: space-between
-}
-
-.flex.jc-s {
-    justify-content: start
-}
-
-.flex.jc-e {
-    justify-content: end
-}
-
-.flex.ai-c {
-    align-items: center
-}
-
-.flex.ai-s {
-    align-items: start
-}
-
-.flex.ai-e {
-    align-items: end
-}
-
-.flex.fd-c {
-    flex-direction: column
-}
-
-.flex.fd-r {
-    flex-direction: row
-}
-
-.text-c {
-    text-align: center
-}
-
-.text-r {
-    text-align: right
-}
-
-.text-l {
-    text-align: left
-}
-
-*,
-*:before,
-*:after {
-    box-sizing: border-box
-}
-
-html {
-    scroll-behavior: smooth !important
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Open Sans
-}
-
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0
-}
-
-a {
-    text-decoration: none
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-i {
-    color: var(--alt-color)
-}
-
-.container {
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    min-height: 97px
-}
-
-@media (min-width: 46.875rem) {
-    .container {
-        width: 46.875rem
-    }
-}
-
-@media (min-width: 60.625rem) {
-    .container {
-        width: 60.625rem
-    }
-}
-
-@media (min-width: 75rem) {
-    .container {
-        width: 75rem
-    }
-}
-
-.main-title {
-    margin: 0 auto 80px;
-    border: 2px solid var(--alt-color);
-    padding: 15px 40px;
-    font-size: 30px;
-    width: fit-content;
-    position: relative;
-    z-index: 1;
-    transition: var(--main-transition);
-    cursor: pointer
-}
-
-.main-title:hover {
-    color: #fff;
-    border: 2px solid #fff;
-    transition-delay: .5s
-}
-
-.main-title:before,
-.main-title:after {
-    content: "";
-    width: 12px;
-    height: 12px;
-    background-color: var(--main-color);
-    position: absolute;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%)
-}
-
-.main-title:after {
-    right: -30px
-}
-
-.main-title:hover:after {
-    animation: right-move .5s linear forwards;
-    z-index: -1
-}
-
-.main-title:before {
-    left: -30px
-}
-
-.main-title:hover:before {
-    animation: left-move .5s linear forwards;
-    z-index: -1
-}
-
-button {
-    border: none;
-    outline: none
-}
-
-@keyframes left-move {
-    50% {
-        left: 0;
-        width: 12px;
-        height: 12px
-    }
-
-    to {
-        border-radius: 0;
-        left: 0;
-        width: 100%;
-        height: 100%
-    }
-}
-
-@keyframes right-move {
-    50% {
-        right: 0;
-        width: 12px;
-        height: 12px
-    }
-
-    to {
-        border-radius: 0;
-        right: 0;
-        width: 100%;
-        height: 100%
-    }
-}
-
-.navbar {
-    padding: 12px 0;
-    background-color: var(--white-bg);
-    box-shadow: 0 0 10px #ddd
-}
-
-@media (max-width: 46.875rem) {
-    .navbar .container {
-        flex-direction: column;
-        padding: 0 0 20px
-    }
-}
-
-.navbar .container .logo {
-    color: var(--alt-color);
-    font-size: 35px;
-    transition: .6s
-}
-
-.navbar .container .logo:hover {
-    color: var(--main-color);
-    transform: rotate(360deg)
-}
-
-@media (max-width: 46.875rem) {
-    .navbar .container .logo {
-        padding: 0 0 10px
-    }
-}
-
-.navbar .container .links ul a {
-    color: var(--alt-color);
-    margin: 0 9px;
-    font-size: 19px;
-    transition: .3s
-}
-
-.navbar .container .links ul a:hover {
-    color: var(--main-color)
-}
-
-@media (max-width: 46.875rem) {
-    .navbar .container .links ul a {
-        font-size: 14px
-    }
-}
-
-.hero {
-    padding: var(--main-padding) 0;
-    background-color: var(--main-bg-color)
-}
-
-.hero .container {
-    gap: .625rem
-}
-
-@media (max-width: 60.625rem) {
-    .hero .container {
-        flex-direction: column;
-        text-align: center
-    }
-}
-
-.hero .container .text h2 {
-    font-size: 35px;
-    line-height: var(--line-height)
-}
-
-@media (max-width: 46.875rem) {
-    .hero .container .text h2 {
-        font-size: 30px
-    }
-}
-
-.hero .container .text h2 span {
-    color: var(--main-color)
-}
-
-.hero .container .text p {
-    font-size: 20px;
-    line-height: var(--line-height)
-}
-
-@media (max-width: 46.875rem) {
-    .hero .container .text p {
-        font-size: 18px
-    }
-}
-
-.hero .container img {
-    max-width: 100%;
-    text-align: center;
-    margin: auto
-}
-
-@media (max-width: 46.875rem) {
-    .hero .container img {
-        display: none
-    }
-}
-
-.services {
-    padding: var(--main-padding) 0
-}
-
-.services .container {
-    gap: 2.5rem;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    display: grid
-}
-
-.services .container .box {
-    box-shadow: #63636333 0 2px 8px;
-    border-radius: .625rem;
-    padding: 30px;
-    transition: var(--main-transition)
-}
-
-.services .container .box i {
-    font-size: 40px
-}
-
-.services .container .box h3 {
-    font-size: 25px
-}
-
-.services .container .box:hover {
-    transform: translateY(-10px);
-    box-shadow: var(--main-color) 0 2px 8px 0
-}
-
-.services .container .box:hover i,
-.services .container .box:hover h3 {
-    color: var(--main-color);
-    cursor: pointer
-}
-
-.services .container .box p {
-    color: #777;
-    line-height: var(--line-height)
-}
-
-.about {
-    padding: var(--main-padding) 0;
-    background-color: var(--main-bg-color)
-}
-
-@media (max-width: 60.625rem) {
-    .about .container {
-        flex-direction: column;
-        justify-content: center
-    }
-}
-
-.about .container .text {
-    flex-basis: 50%
-}
-
-@media (max-width: 60.625rem) {
-    .about .container .text {
-        text-align: center
-    }
-}
-
-.about .container .text h2 {
-    font-size: 45px
-}
-
-@media (max-width: 60.625rem) {
-    .about .container .text h2 {
-        font-size: 30px
-    }
-}
-
-.about .container .text p {
-    font-size: 25px;
-    color: #777;
-    line-height: var(--line-height)
-}
-
-@media (max-width: 60.625rem) {
-    .about .container .text p {
-        font-size: 21px
-    }
-}
-
-@media (max-width: 46.875rem) {
-    .about .container .text p {
-        font-size: 18px
-    }
-}
-
-.about .container .text .social {
-    margin: 5px 0;
-    gap: 20px
-}
-
-@media (max-width: 60.625rem) {
-    .about .container .text .social {
-        gap: 10px;
-        justify-content: center
-    }
-}
-
-.about .container .text .social i {
-    font-size: 32px;
-    cursor: pointer
-}
-
-@media (max-width: 60.625rem) {
-    .about .container .text .social i {
-        font-size: 25px
-    }
-}
-
-.about .container .text .social .twitter:hover {
-    color: #1da1f2
-}
-
-.about .container .text .social .youtube:hover {
-    color: red
-}
-
-.about .container .text .social .linkedin:hover {
-    color: #0a66c2
-}
-
-.about .container .img {
-    flex-basis: 40%
-}
-
-.about .container .img img {
-    max-width: 100%
-}
-
-@media (max-width: 60.625rem) {
-    .about .container .img img {
-        display: none
-    }
-}
-
-.feat {
-    padding: var(--main-padding) 0
-}
-
-.feat .container {
-    gap: 2.5rem;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    display: grid
-}
-
-.feat .container .box {
-    box-shadow: #63636333 0 2px 8px;
-    border-radius: .625rem;
-    padding: 30px;
-    transition: var(--main-transition)
-}
-
-.feat .container .box i {
-    font-size: 40px
-}
-
-.feat .container .box h3 {
-    font-size: 25px
-}
-
-.feat .container .box:hover {
-    transform: translateY(-10px);
-    box-shadow: var(--main-color) 0 2px 8px 0
-}
-
-.feat .container .box:hover i,
-.feat .container .box:hover h3 {
-    color: var(--main-color);
-    cursor: pointer
-}
-
-.feat .container .box p {
-    color: #777;
-    line-height: var(--line-height)
-}
-
-.reviews {
-    padding: var(--main-padding) 0;
-    background-color: var(--main-bg-color)
-}
-
-.reviews .container {
-    gap: 3.4375rem;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    display: grid;
-    padding: 40px 0 0;
-}
-
-.reviews .container .box {
-    box-shadow: #63636333 0 2px 8px;
-    border-radius: .625rem;
-    padding: 30px;
-    transition: var(--main-transition);
-    background-color: #fff;
-    position: relative;
-    margin: 0 20px;
-}
-
-.reviews .container .box img {
-    position: absolute;
-    top: -36px;
-    left: 0;
-    width: 70px;
-    height: auto;
-    border-radius: 50%
-}
-
-.reviews .container .box h3 {
-    font-size: 24px
-}
-
-.reviews .container .box p {
-    color: #777;
-    line-height: var(--line-height)
-}
-
-.reviews .container .box:hover {
-    transform: translateY(-10px);
-    box-shadow: var(--main-color) 0 2px 8px 0
-}
-
-.contact {
-    padding: var(--main-padding) 0
-}
-
-@media (max-width: 60.625rem) {
-    .contact .container {
-        justify-content: center
-    }
-}
-
-.contact .img {
-    flex-basis: 40%
-}
-
-.contact .img img {
-    max-width: 100%
-}
-
-@media (max-width: 60.625rem) {
-    .contact .img {
-        display: none
-    }
-}
-
-.contact form {
-    gap: 20px;
-    flex-basis: 50%
-}
-
-@media (max-width: 60.625rem) {
-    .contact form {
-        flex-basis: 80%;
-        text-align: center;
-        margin: auto
-    }
-}
-
-.contact form input,
-.contact form textarea {
-    border: none;
-    padding: 15px 12px;
-    border-bottom: 3px solid #ececec;
-    outline: none;
-    color: #777;
-    font-size: 17px;
-    caret-color: var(--main-color);
-    background-color: #f9f9f9;
-    display: block;
-    width: 100%;
-    transition: var(--main-transition)
-}
-
-.contact form input::placeholder,
-.contact form textarea::placeholder {
-    color: #777;
-    font-size: 17px;
-    transition: opacity .2s
-}
-
-.contact form input:focus::placeholder,
-.contact form textarea:focus::placeholder {
-    opacity: 0
-}
-
-.contact form textarea {
-    resize: none
-}
-
-.contact form button {
-    background-color: var(--main-color);
-    color: #fff;
-    width: 100%;
-    padding: 15px;
-    cursor: pointer;
-    transition: var(--main-transition);
-    display: block;
-    font-size: 16px
-}
-
-.contact form button:hover {
-    background-color: var(--alt-color)
-}
-
-footer {
-    padding: 20px 0;
-    background-color: var(--alt-color)
-}
-
-footer .container .logo {
-    color: #fff;
-    font-size: 35px
-}
-
-footer .container .social {
-    gap: 20px;
-    margin-top: 8px
-}
-
-footer .container .social i {
-    font-size: 29px;
-    cursor: pointer;
-    color: #fff
-}
-
-footer .container .social .twitter:hover {
-    color: #1da1f2
-}
-
-footer .container .social .youtube:hover {
-    color: red
-}
-
-footer .container .social .linkedin:hover {
-    color: #0a66c2
-}
-
-footer .container .social .whatsapp:hover {
-    color: #25d366
-}
-
-footer .copyright-text {
-    text-align: center;
-    color: #fff
-}
+:root{--main-color: #6C63FF;--alt-color: #081828;--white-bg: #FFF;--main-bg-color: #F4F7FA;--line-height: 1.6;--main-padding: 80px;--main-transition: .5s}.flex{display:flex}.flex.jc-c{justify-content:center}.flex.jc-sb{justify-content:space-between}.flex.jc-s{justify-content:start}.flex.jc-e{justify-content:end}.flex.ai-c{align-items:center}.flex.ai-s{align-items:start}.flex.ai-e{align-items:end}.flex.fd-c{flex-direction:column}.flex.fd-r{flex-direction:row}.text-c{text-align:center}.text-r{text-align:right}.text-l{text-align:left}*,*:before,*:after{box-sizing:border-box}html{scroll-behavior:smooth!important}body{margin:0;padding:0;font-family:Open Sans}ul{list-style:none;margin:0;padding:0}a{text-decoration:none}h1,h2,h3,h4,h5,h6,p,i{color:var(--alt-color)}.container{padding-left:15px;padding-right:15px;margin-left:auto;margin-right:auto;min-height:97px}@media (min-width: 46.875rem){.container{width:46.875rem}}@media (min-width: 60.625rem){.container{width:60.625rem}}@media (min-width: 75rem){.container{width:75rem}}.main-title{margin:0 auto 80px;border:2px solid var(--alt-color);padding:15px 40px;font-size:30px;width:fit-content;position:relative;z-index:1;transition:var(--main-transition);cursor:pointer}.main-title:hover{color:#fff;border:2px solid #fff;transition-delay:.5s}.main-title:before,.main-title:after{content:"";width:12px;height:12px;background-color:var(--main-color);position:absolute;border-radius:50%;top:50%;transform:translateY(-50%)}.main-title:after{right:-30px}.main-title:hover:after{animation:right-move .5s linear forwards;z-index:-1}.main-title:before{left:-30px}.main-title:hover:before{animation:left-move .5s linear forwards;z-index:-1}button{border:none;outline:none}@keyframes left-move{50%{left:0;width:12px;height:12px}to{border-radius:0;left:0;width:100%;height:100%}}@keyframes right-move{50%{right:0;width:12px;height:12px}to{border-radius:0;right:0;width:100%;height:100%}}.navbar{padding:12px 0;background-color:var(--white-bg);box-shadow:0 0 10px #ddd}@media (max-width: 46.875rem){.navbar .container{flex-direction:column;padding:0 0 20px}}.navbar .container .logo{color:var(--alt-color);font-size:35px;transition:.6s}.navbar .container .logo:hover{color:var(--main-color);transform:rotate(360deg)}@media (max-width: 46.875rem){.navbar .container .logo{padding:0 0 10px}}.navbar .container .links ul a{color:var(--alt-color);margin:0 9px;font-size:19px;transition:.3s}.navbar .container .links ul a:hover{color:var(--main-color)}@media (max-width: 46.875rem){.navbar .container .links ul a{font-size:14px}}.hero{padding:var(--main-padding) 0;background-color:var(--main-bg-color)}.hero .container{gap:.625rem}@media (max-width: 60.625rem){.hero .container{flex-direction:column;text-align:center}}.hero .container .text h2{font-size:35px;line-height:var(--line-height)}@media (max-width: 46.875rem){.hero .container .text h2{font-size:30px}}.hero .container .text h2 span{color:var(--main-color)}.hero .container .text p{font-size:20px;line-height:var(--line-height)}@media (max-width: 46.875rem){.hero .container .text p{font-size:18px}}.hero .container img{max-width:100%;text-align:center;margin:auto}@media (max-width: 46.875rem){.hero .container img{display:none}}.services{padding:var(--main-padding) 0}.services .container{gap:2.5rem;grid-template-columns:repeat(auto-fill,minmax(300px,1fr));display:grid}.services .container .box{box-shadow:#63636333 0 2px 8px;border-radius:.625rem;padding:30px;transition:var(--main-transition)}.services .container .box i{font-size:40px}.services .container .box h3{font-size:25px}.services .container .box:hover{transform:translateY(-10px);box-shadow:var(--main-color) 0 2px 8px 0}.services .container .box:hover i,.services .container .box:hover h3{color:var(--main-color);cursor:pointer}.services .container .box p{color:#777;line-height:var(--line-height)}.about{padding:var(--main-padding) 0;background-color:var(--main-bg-color)}@media (max-width: 60.625rem){.about .container{flex-direction:column;justify-content:center}}.about .container .text{flex-basis:50%}@media (max-width: 60.625rem){.about .container .text{text-align:center}}.about .container .text h2{font-size:45px}@media (max-width: 60.625rem){.about .container .text h2{font-size:30px}}.about .container .text p{font-size:25px;color:#777;line-height:var(--line-height)}@media (max-width: 60.625rem){.about .container .text p{font-size:21px}}@media (max-width: 46.875rem){.about .container .text p{font-size:18px}}.about .container .text .social{margin:5px 0;gap:20px}@media (max-width: 60.625rem){.about .container .text .social{gap:10px;justify-content:center}}.about .container .text .social i{font-size:32px;cursor:pointer}@media (max-width: 60.625rem){.about .container .text .social i{font-size:25px}}.about .container .text .social .twitter:hover{color:#1da1f2}.about .container .text .social .youtube:hover{color:red}.about .container .text .social .linkedin:hover{color:#0a66c2}.about .container .img{flex-basis:40%}.about .container .img img{max-width:100%}@media (max-width: 60.625rem){.about .container .img img{display:none}}.feat{padding:var(--main-padding) 0}.feat .container{gap:2.5rem;grid-template-columns:repeat(auto-fill,minmax(300px,1fr));display:grid}.feat .container .box{box-shadow:#63636333 0 2px 8px;border-radius:.625rem;padding:30px;transition:var(--main-transition)}.feat .container .box i{font-size:40px}.feat .container .box h3{font-size:25px}.feat .container .box:hover{transform:translateY(-10px);box-shadow:var(--main-color) 0 2px 8px 0}.feat .container .box:hover i,.feat .container .box:hover h3{color:var(--main-color);cursor:pointer}.feat .container .box p{color:#777;line-height:var(--line-height)}.reviews{padding:var(--main-padding) 0;background-color:var(--main-bg-color)}.reviews .container{gap:3.4375rem;grid-template-columns:repeat(auto-fill,minmax(300px,1fr));display:grid;padding:40px 0 0}.reviews .container .box{box-shadow:#63636333 0 2px 8px;border-radius:.625rem;padding:30px;transition:var(--main-transition);background-color:#fff;position:relative;margin:0 20px}.reviews .container .box img{position:absolute;top:-36px;left:0;width:70px;height:auto;border-radius:50%}.reviews .container .box h3{font-size:24px}.reviews .container .box p{color:#777;line-height:var(--line-height)}.reviews .container .box:hover{transform:translateY(-10px);box-shadow:var(--main-color) 0 2px 8px 0}.contact{padding:var(--main-padding) 0}@media (max-width: 60.625rem){.contact .container{justify-content:center}}.contact .img{flex-basis:40%}.contact .img img{max-width:100%}@media (max-width: 60.625rem){.contact .img{display:none}}.contact form{gap:20px;flex-basis:50%}@media (max-width: 60.625rem){.contact form{flex-basis:80%;text-align:center;margin:auto}}.contact form input,.contact form textarea{border:none;padding:15px 12px;border-bottom:3px solid #ececec;outline:none;color:#777;font-size:17px;caret-color:var(--main-color);background-color:#f9f9f9;display:block;width:100%;transition:var(--main-transition)}.contact form input::placeholder,.contact form textarea::placeholder{color:#777;font-size:17px;transition:opacity .2s}.contact form input:focus::placeholder,.contact form textarea:focus::placeholder{opacity:0}.contact form textarea{resize:none}.contact form button{background-color:var(--main-color);color:#fff;width:100%;padding:15px;cursor:pointer;transition:var(--main-transition);display:block;font-size:16px}.contact form button:hover{background-color:var(--alt-color)}footer{padding:20px 0;background-color:var(--alt-color)}footer .container .logo{color:#fff;font-size:35px}footer .container .social{gap:20px;margin-top:8px}footer .container .social i{font-size:29px;cursor:pointer;color:#fff}footer .container .social .twitter:hover{color:#1da1f2}footer .container .social .youtube:hover{color:red}footer .container .social .linkedin:hover{color:#0a66c2}footer .container .social .whatsapp:hover{color:#25d366}footer .copyright-text{text-align:center;color:#fff}
